[package]
name = "reverence"
version = "0.0.3"
edition = "2021"
authors = ["Devin <kramerdevin321@gmail.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib","rlib"]

# [dev-dependencies]
# criterion = "0.3"
# iai = "0.1"
# [[bench]]
# name = "my_benchmark"
# harness = false

[dependencies]
async-trait = "0.1.64"
bytemuck = {version="1.13.0",features=["derive"]}
cfg-if = "1"
env_logger = "0.10.0"
futures = "0.3.27"
#ggrs = "0.9.3"
glam = "0.22.0"
iced = {version = "0.7.0",optional = true}
iced_wgpu = {version = "0.8.0",optional = true}
iced_winit = {version = "0.7.0",optional = true}
instant = "0.1.12"
log = "0.4.17"
pollster = "0.3.0" #To be removed in favor of tokio
rand = "0.8.5"
raw-window-handle = "0.5.1"
# rayon = "1.6.1"
tokio = { version = "1", features = ["sync","macros","io-util","rt","time"] }
wgpu = "0.15.0"
winit = "0.27.5"




[features]
gui = ["dep:iced", "dep:iced_wgpu", "dep:iced_winit"]
full = ["tokio/full"]

