[package]
name = "reverence"
version = "0.0.3"
edition = "2021"
authors = ["Devin <kramerdevin321@gmail.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib","rlib"]

# [dev-dependencies]
# criterion = "0.3"
# iai = "0.1"
# [[bench]]
# name = "my_benchmark"
# harness = false

[dependencies]
async-trait = "0.1.68"
bytemuck = {version="1.13.0",features=["derive"]}
cfg-if = "1"
egui = "0.22.0"
egui-wgpu = "0.22.0"
egui-winit = "0.22.0"
env_logger = "0.10.0"
futures = "0.3.27"
#ggrs = "0.9.3"
glam = "0.22.0"
instant = "0.1.12"
log = "0.4.17"
pollster = "0.3.0" #To be removed in favor of tokio
rand = "0.8.5"
raw-window-handle = "0.5.1"
rayon = "1.7.0"
# rayon = "1.6.1"
tokio = { version = "1", features = ["sync","macros","io-util","rt","time"] }
wasm-bindgen = "0.2.86"
wasm-bindgen-futures = "0.4.36"
web-sys = "0.3.63"
wgpu = "0.15.0"
winit = "0.27.5"


[[example]]
name = "IK"

[features]
full = ["tokio/full"]

